	  the object's smallest 2d dimension plus 1 from the object.
	* pathfinder/path.cc: Improved path tracing slightly by having it also print
	  z coordinates.
	* paths.cc: Fixed a few incorrect results for grabbing objects through walls
	  re-introduced in commit #7224.
	* paths.cc: Fixed incorrect blocked objects from commits #7224-#7225.

2012-12-18	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* usecode/*: Fixed longstanding bug in usecode symbol table. Also fixed bug
	  #3011723 "Keyring Mod - targeted NPC spells" by adding a second opcode for
	  indirect function calls with parameters.

2012-12-18	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* configure.ac: Added an option (--enable-pedantic-warnings) to build with
	  pedantic warnings, which is independent of other warning options. Removed
	  some stray left-overs from GIMP plugin code, and fixed version numbers.
	  Some identation changes.
	* usecode/useval.cc: Fixed bugs #3597062 "Buying reagents from Wis-Sur is
	  broken" and #3597307 "Training in SI broken - result 0 combat points",
	  both due to hard-coding a modulus operator in a generic division/modulus
	  operator.
	* exult.cc: Fixed bug #3597039 "segfault on main menu quit with only Speech 
	  enabled audio".
	* shapeinf/aniinf.cc: Removing dead code.
	* game.cc, gamedat.cc, gamemap.cc, readnpcs.cc, gamemgr/bggame.cc,
	  shapes/miscinf.cc, usecode/ucinternal.cc: Using const reference exceptions.
	  Rethrowing using empty throw to avoid unnecessary copies.
	* windrag.h, files/U7obj.h, shapes/shapeinf.*: More 'correct' assignment
	  operators (ward against self-assignment, non-const return).
	* imagewin/scale_xbr.h: Made template parameters more explicit.

2012-12-17 Dominik Reichardt <dominus@users.sourceforge.net>
	* gamemgr/bggame.cc: Only show the BG intro subtitles when audio and speech 
	  are disabled.
	
2012-12-15	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* usecode/ucinternal.cc: Fixed bug #3596110 '"Your hands are too full" even