@@ -196,6 +196,9 @@ bool Gump_manager::close_gump(Gump *gump)
 
 bool Gump_manager::remove_gump(Gump *gump)
 {
+	Gump *dragged = gwin->get_dragging_gump();
+	if (dragged == gump)
+		gwin->stop_dragging();
 	if (gump == kbd_focus)
 		set_kbd_focus(0);
 	if (open_gumps)
