@@ -11,6 +11,8 @@
 	* paths.cc: Fixed a few incorrect results for grabbing objects through walls
 	  re-introduced in commit #7224.
 	* paths.cc: Fixed incorrect blocked objects from commits #7224-#7225.
+	* gamewin.h, drag.cc, gumps/Gump_manager.cc: Fixed segfault on dragging a
+	  gump and deleting it at the same time (e.g., right click closes gumps).
 
 2012-12-18	Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* usecode/*: Fixed longstanding bug in usecode symbol table. Also fixed bug
